--- a/app/views/docs/migrations-cloud-to-local.phtml
+++ b/app/views/docs/migrations-cloud-to-local.phtml
@@ -18,7 +18,7 @@
     and <a href="#notices">things to keep in mind</a> sections above.
 </p>
 
-<h3>Steps on Your Cloud Project</h3>
+<h3>Steps in Cloud Console</h3>
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>Navigate to your Appwrite Cloud Console and click on the <b>Migrations</b> tab in <b>Project Settings</b>.</li>
     <li>Click <b>Export to Self-hosted</b>, you will be prompted to input the URL of your self-hosted Appwrite project.</li>
