--- a/app/views/docs/migrations-cloud-to-local.phtml
+++ b/app/views/docs/migrations-cloud-to-local.phtml
@@ -26,7 +26,7 @@
     <li>After clicking <b>Continue</b>, you'll be redirected to your self-hosted project to complete the process.</li>
 </ol>
 
-<h3>Steps on Your Self-hosted Project</h3>
+<h3>Steps in Self-hosted Console</h3>
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>Once redirected to your self-hosted project, you'll be prompted to select an organization and a project. You can migrate to an existing project or create a new one.</li>
     <li>Select the data you wish to migrate. You can choose among accounts, databases, documents, files, and functions.</li>
