--- a/app/views/docs/migrations-cloud-to-local.phtml
+++ b/app/views/docs/migrations-cloud-to-local.phtml
@@ -28,7 +28,7 @@
 
 <h3>Steps in Self-hosted Console</h3>
 <ol class="margin-top margin-bottom-large text-size-normal">
-    <li>Once redirected to your self-hosted project, you'll be prompted to select an organization and a project. You can migrate to an existing project or create a new one.</li>
+    <li>Once redirected to your self-hosted server, you'll be prompted to select a project. If you have multiple organizations, you will also be asked to pick one. You can migrate to an existing project or create a new one.</li>
     <li>Select the data you wish to migrate. You can choose among accounts, databases, documents, files, and functions.</li>
     <li>Click <b>Start migration</b> to start the migration process. You do not need to keep the Appwrite Console open through the process.</li>
 </ol>
