--- a/app/views/docs/migrations-local-to-cloud.phtml
+++ b/app/views/docs/migrations-local-to-cloud.phtml
@@ -11,7 +11,7 @@
     <li>Migrations are non-destructive. No data will be deleted or lost in the source project.</li>
 </ol>
 
-<h2><a href="#migration-process" id="migration-process">Migrating to Self-hosted from Cloud</a></h2>
+<h2><a href="#migration-process" id="migration-process">Migrating to Cloud from Self-hosted</a></h2>
 <p>
     To begin migrating to self-hosted, make sure to read the <a href="/docs/migrations">migration overview</a>
     and <a href="#notices">things to keep in mind</a> sections above.
