--- a/app/views/docs/migrations-local-to-cloud.phtml
+++ b/app/views/docs/migrations-local-to-cloud.phtml
@@ -17,7 +17,7 @@
     and <a href="#notices">things to keep in mind</a> sections above.
 </p>
 
-<h3>Steps on Your Self-hosted Project</h3>
+<h3>Steps in Self-hosted Console</h3>
 
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>Navigate to your self-hosted project's console and click on the <b>Migrations</b> tab.</li>
