--- a/app/views/docs/migrations-local-to-cloud.phtml
+++ b/app/views/docs/migrations-local-to-cloud.phtml
@@ -25,7 +25,7 @@
     <li>You will complete the migration on Appwrite Cloud.</li>
 </ol>
 
-<h3>Steps on Your Cloud Project</h3>
+<h3>Steps in Cloud Console</h3>
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>Once redirected to Appwrite Cloud, you'll be prompted to select an organization and a project. You can migrate to an existing project or create a new one.</li>
     <li>Select the data you wish to migrate. You can choose among accounts, databases, documents, files, and functions.</li>
