--- a/app/views/docs/migrations-local-to-cloud.phtml
+++ b/app/views/docs/migrations-local-to-cloud.phtml
@@ -21,7 +21,7 @@
 
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>Navigate to your self-hosted project's console and click on the <b>Migrations</b> tab in <b>Project Settings</b>.</li>
-    <li>Click <b>Deploy to cloud</b>, you will be redirected to Appwrite Cloud.</li>
+    <li>Click <b>Deploy to cloud</b>, and you will be redirected to Appwrite Cloud.</li>
     <li>You will complete the migration on Appwrite Cloud.</li>
 </ol>
 
