--- a/app/views/docs/migrations.phtml
+++ b/app/views/docs/migrations.phtml
@@ -1,6 +1,7 @@
 <p>
     If you're looking to migrate existing projects to Appwrite, Migrations can help you make the move more quickly.
     You can move your app from Firebase, Supabase, NHost, and even move between self-hosted and Cloud projects using Migrations.
+    You can also use Migrations to move between two self-hosted instances or even to duplicate project on the same instance.
     Migrations will automatically move accounts, database documents, and storage files from one source to another.
 </p>
 
