--- a/app/views/docs/migrations.phtml
+++ b/app/views/docs/migrations.phtml
@@ -82,6 +82,6 @@
 </p>
 
 <p>
-    Migrations help you jump start your move, but because each product is unique, complex databases and product unique features like functions need to be migrated manually.
+    Migrations help you jump start your move, but because each product is unique, complex databases and product unique features like functions might need to be migrated manually.
     We also recommend you carefully <b>validate permissions and data integrity</b> when moving between platforms. 
 </p>
