--- a/app/views/docs/migrations-firebase.phtml
+++ b/app/views/docs/migrations-firebase.phtml
@@ -22,7 +22,7 @@
 
 <ol class="margin-top margin-bottom-large text-size-normal">
   <li>
-    Create a new project and click on the <b>Migrations</b> tab.
+    Create a new project and click on the <b>Migrations</b> tab in <b>Project Settings</b>.
   </li>
   <li>
     Click on the <b>Create Migration</b> button and select <b>Firebase</b> as your source.
