--- a/app/views/docs/migrations.phtml
+++ b/app/views/docs/migrations.phtml
@@ -7,7 +7,10 @@
 
 <h2><a href="#supported-sources" id="supported-sources">Supported sources</a></h2>
 <p>
-    You can transfer from these sources to an Appwrite project.
+    You can transfer from these sources to an Appwrite project. 
+    Resources marked <span class="tag green">supported</span> are migrated automatically.
+    Resources marked <span class="tag yellow">partial</span> can be migrated, but with limitations or caveats, check the guide for each source to learn more.
+    Resources marked <span class="tag">manual</span> require manual migration.
 </p>
 
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large text-size-small vertical">
@@ -54,7 +57,7 @@
         </tr>   
         <tr>
             <td>
-                <p><a href="/docs/migrations-cloud-to-local"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Self-hosted</a></p>
+                <p><a href="/docs/migrations-cloud-to-self-hosted"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Self-hosted</a></p>
             </td>
             <td><span class="tag green">supported</span></td>
             <td><span class="tag green">supported</span></td>
@@ -64,7 +67,7 @@
         </tr>   
         <tr>
             <td>
-                <p><a href="/docs/migrations-local-to-cloud"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Self-hosted to Cloud</a></p>
+                <p><a href="/docs/migrations-self-hosted-to-cloud"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Self-hosted to Cloud</a></p>
             </td>
             <td><span class="tag green">supported</span></td>
             <td><span class="tag green">supported</span></td>
