Address matej's comments

--- a/app/views/docs/migrations-nhost.phtml
+++ b/app/views/docs/migrations-nhost.phtml
@@ -33,6 +33,9 @@
   <li>
     Select the resources you want to migrate and finally click <b>Start migration</b> to begin the migration process.
   </li>
+  <li>
+    Finally, add the platforms for your <a href="/docs/getting-started-for-web">Web</a>, <a href="getting-started-for-flutter/docs/getting-started-for-flutter">Flutter</a>, <a href="/docs/getting-started-for-android">Android</a>, and <a href="/docs/getting-started-for-apple">iOS</a> apps.
+  </li>
 </ol>
 
 <h3><a href="#credentials" id="credentials">NHost Credentials</a></h3>
