--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -2,7 +2,7 @@
 
 <p>
     Each Appwrite project can have its own set of unique templates. 
-    Templates also support localization, every template can be written in multiple languages and served 
+    Templates also support localization, so every template can be written in multiple languages and served 
     depending on the configured locale.
 </p>
 
