--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -1,4 +1,4 @@
-<p>Appwrite uses email and SMS messages to communicate with users to perform authentication actions. Emails and SMS messages can be customized to fit your app's design and voice.</p>
+<p>Appwrite uses email and SMS messages to communicate with users to perform authentication and verification actions. Emails and SMS messages can be customized to fit your app's design and voice.</p>
 
 <p>
     Each Appwrite project can have its own set of unique templates. 
