--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -17,7 +17,7 @@
 <p>You can customize email templates for each of your projects in the Appwrite console. </p>
 <div class="notice">
     <h2>Custom SMTP Server Required</h2>
-    <p>The built-in email service does not support custom email templates. Configure a <a href="#smtp">custom SMTP server</a> to enable custom email templates.</p>
+    <p>The built-in email service does not support custom email templates to prevent malicious templates. Configure a <a href="#smtp">custom SMTP server</a> to enable custom email templates.</p>
 </div>
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>In your project, navigate to the <b>Auth</b> service.</li>
@@ -40,15 +40,15 @@
     <tbody>
     <tr>
         <td>Sender name</td>
-        <td>Readers will see this as display name of the sender.</td>
+        <td>Readers will see this as a display name of the sender.</td>
     </tr>
     <tr>
         <td>Sender email</td>
-        <td>Readers will see this as the displayed email of the sender. This must be a valid email for the SMTP provider you've configured.</td>
+        <td>Readers will see this as a display email of the sender. This email must be authenticated on the SMTP provider you've configured, otherwise it will be delivered to the spam folder. This usually means the email must end with the same domain as your SMTP username.</td>
     </tr>
     <tr>
         <td>Reply to</td>
-        <td>Readers will reply to this email address instead of the sender address. You can leave this field empty if unused.</td>
+        <td>Readers will reply to this email address instead of the sender address. You can leave this field empty, and the sender email will be used automatically.</td>
     </tr>
     <tr>
         <td>Subject</td>
@@ -56,12 +56,12 @@
     </tr>
     <tr>
         <td>Message</td>
-        <td>The body of the email. You can find the variables available in the <a href="#email-template-syntax">Email Template Syntax</a> section.</td>
+        <td>The body of the email in HTML format. You can find the variables available in the <a href="#email-template-syntax">Email Template Syntax</a> section.</td>
     </tr>
     </tbody>
 </table>
 <h3><a href="#email-template-syntax" id="email-template-syntax">Email Template Syntax</a></h3>
-<p>Variables can be used in email templates to dynamically format unique emails for each reader. These variables can only be accessed in the <b>Message</b> field of the email template.</p>
+<p>Variables can be used in email templates to dynamically construct unique emails for each reader. These variables can only be used in the <b>Message</b> field of the email template.</p>
 
 <table class="full text-size-small">
     <thead>
@@ -81,7 +81,7 @@
     </tr>
     <tr>
         <td><code>{{user}}</code></td>
-        <td>The name of the user receiving the email.</td>
+        <td>The name of the user receiving the email. This variable is not available in the Magic URL template, as there might not be a user yet.</td>
     </tr>
     <tr>
         <td><code>{{redirect}}</code></td>
@@ -192,7 +192,7 @@
 </p>
 
 <p>
-    You can send messages in different localizations by setting the locale with <code>client.setLocale()</code> in the SDKs or the <code>X-Appwrite-Locale</code> HTTP header.
+    You can send messages in different languages by setting the locale with <code>client.setLocale()</code> in the SDKs or the <code>X-Appwrite-Locale</code> HTTP header. <a href="https://github.com/appwrite/appwrite/blob/master/app/config/locale/codes.php">View here the list of available locales</a>
 </p>
 
 <p>For example, you can send a phone verification in French.</p>
