--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -14,7 +14,7 @@
 </p>
 
 <h2><a href="#customize" id="customize">Customize Templates</a></h2>
-<p>You can customize email templates for each of your projects in the Appwrite console. </p>
+<p>You can customize email templates for each of your projects in the Appwrite Console. </p>
 <div class="notice">
     <h2>Custom SMTP Server Required</h2>
     <p>The built-in email service does not support custom email templates to prevent malicious templates. Configure a <a href="#smtp">custom SMTP server</a> to enable custom email templates.</p>
