--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -107,7 +107,7 @@ $cols = [
                     <li><a href="/docs/pagination">Pagination</a></li>
                     <li><a href="/docs/webhooks">Webhooks</a></li>
                     <li><a href="/docs/custom-domains">Custom Domains</a></li>
-                    <li><a href="/docs/email-and-sms-templates">Email and SMS Templates</a></li>
+                    <li><a href="/docs/email-and-sms-templates">Email Templates</a></li>
                     <li><a href="/docs/response-codes">Response Codes</a></li>
                     <li><a href="/docs/rate-limits">Rate Limits</a></li>
                     <li>
