--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -1301,7 +1301,7 @@ namespace runtime {
     <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
         <thead>
             <tr>
-                <th style="width: 250px">Variable</th>
+                <th style="width: 260px">Variable</th>
                 <th>Description</th>
             </tr>
         </thead>
@@ -1372,64 +1372,7 @@ namespace runtime {
         You can access the environment variables through the systems library of each language.
     </p>
 
-    <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
-        <thead>
-            <tr>
-                <th style="width: 250px">Variable</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>x-appwrite-trigger</td>
-                <td>
-                    Describes how the function execution was invoked.
-                    Possible values are <code>http</code>, <code>schedule</code> or <code>event</code>.
-                </td>
-            </tr>
-            <tr>
-                <td>x-appwrite-event</td>
-                <td>
-                    If the function execution was triggered by an event, describes the triggering event.
-                </td>
-            </tr>
-            <tr>
-                <td>x-appwrite-user-id</td>
-                <td>
-                    If the function execution was invoked by an authenticated user, display the user ID.
-                    This doesn't apply to Appwrite Console users or API keys.
-                </td>
-            </tr>
-            <tr>
-                <td>x-appwrite-user-jwt</td>
-                <td>
-                    JWT token generated from the invoking user's session. Used to authenticate Server SDKs to respect access permissions.
-                    <a href="/docs/authentication-server">Learn more about JWT tokens.</a>
-                </td>
-            </tr>
-            <tr>
-                <td>x-appwrite-country-code</td>
-                <td>
-                    Displays the country code of the configured locale.
-                </td>
-            </tr>
-            <tr>
-                <td>x-appwrite-continent-code</td>
-                <td>
-                    Displays the continent code of the configured locale.
-                </td>
-            </tr>
-            <tr>
-                <td>x-appwrite-continent-eu</td>
-                <td>
-                    Describes if the configured local is within the EU.
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-
-    <h3><a href="#response" id="response">Response</a></h3>
+    
     <p>
         If you need to send a response to the invoker of the function, such as a user, client app, or an integration, use the response object.
         The response information <b>will not be logged</b> to the Appwrite Console.
@@ -1555,6 +1498,283 @@ namespace runtime {
       static RuntimeOutput main(RuntimeContext &context) {
 
       return context.send(std::getenv("MY_VAR"), 200);
+  };
+}</code></pre>
+            </div>
+        </li>
+    </ul>
+
+    <h3><a href="#response" id="response">Response</a></h3>
+    
+    <ul class="phases clear" data-ui-phases>
+        <li>
+            <h3>Node.js</h3>
+            <div class="ide margin-top-small" data-lang="javascript" data-lang-label="JavaScript">
+                <pre class="line-numbers"><code class="prism language-js" data-prism>export default async ({ req, res, log }) => {
+
+    switch (req.query.type) {
+        case 'text':
+            return res.send("This is a text response", 200);
+        case 'json':
+            return res.json({"type": "This is a JSON response"}, 200);
+        case 'redirect':
+            return res.redirect("https://appwrite.io", 301);
+        case 'html':
+            return res.send(
+                "&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, {
+                    "content-type": "text/html"
+                });
+        default:
+            return res.empty();
+    }
+}</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>PHP</h3>
+            <div class="ide margin-top-small" data-lang="php" data-lang-label="PHP">
+                <pre class="line-numbers"><code class="prism language-php" data-prism>&lt;?php
+
+return function ($context) {
+    switch ($context->req->query['type']) {
+        case 'text':
+            return $context->res->send("This is a text response", 200);
+        case 'json':
+            return $context->res->json(["type" => "This is a JSON response"], 200);
+        case 'redirect':
+            return $context->res->redirect("https://appwrite.io", 301);
+        case 'html':
+            return $context->res->send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, [
+                "content-type" => "text/html"
+                ]);
+        default:
+            return $context->res->empty();
+    }
+};</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>Python</h3>
+            <div class="ide margin-top-small" data-lang="python" data-lang-label="Python">
+                <pre class="line-numbers"><code class="prism language-python" data-prism>def main(context):
+    switch context.req.query['type']:
+        case 'text':
+            return context.res.send("This is a text response", 200)
+        case 'json':
+            return context.res.json({"type": "This is a JSON response"}, 200)
+        case 'redirect':
+            return context.res.redirect("https://appwrite.io", 301)
+        case 'html':
+            return context.res.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, {
+                "content-type": "text/html"
+            })
+        default:
+            return context.res.empty()</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>Ruby</h3>
+            <div class="ide margin-top-small" data-lang="ruby" data-lang-label="Ruby">
+                <pre class="line-numbers"><code class="prism language-ruby" data-prism>def main(context)
+    case context.req.query['type'] 
+        when 'text'
+            return context.res.send("This is a text response", 200)
+        when 'json'
+            return context.res.json({"type": "This is a JSON response"}, 200)
+        when 'redirect'
+            return context.res.redirect("https://appwrite.io", 301)
+        when 'html'
+            return context.res.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, {
+                "content-type": "text/html"
+            })
+        else
+            return context.res.empty()
+    end
+end</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>Deno</h3>
+            <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno">
+                <pre class="line-numbers"><code class="prism language-typescript" data-prism>export default async ({ req, res, log }) => {
+
+    switch (req.query.type) {
+        case 'text':
+            return res.send("This is a text response", 200);
+        case 'json':
+            return res.json({type": "This is a JSON response"}, 200);
+        case 'redirect':
+            return res.redirect("https://appwrite.io", 301);
+        case 'html':
+            return res.send(
+                "&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, {
+                    "content-type": "text/html"
+                });
+        default:
+            return res.empty();
+    }
+}</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>Dart</h3>
+            <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart">
+                <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'dart:async';
+
+Future&lt;dynamic> main(final context) async {
+    switch (context.req.query['type']) {
+        case 'text':
+            return context.res
+                .send('This is a text response', 200);
+        case 'json':
+            return context.res
+                .json({'type': 'This is a JSON response'});
+        case 'redirect':
+            return context.res
+                .redirect('https://appwrite.io', 301);
+        case 'html':
+            return context.res
+                .send('&lt;h1&gt;This is an HTML response&lt;/h1&gt;', 200, {
+                    'content-type': 'text/html'
+                });
+        default:
+            return context.res
+                .empty();
+    }
+}</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>Swift</h3>
+            <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift">
+                <pre class="line-numbers"><code class="prism language-swift" data-prism>import Foundation
+
+func main(context: RuntimeContext) async throws -> RuntimeOutput {
+    switch context.req.query["type"] {
+        case "text":
+            return try await context.send("This is a text response", 200)
+        case "json":
+            return try await context.send(["type": "This is a JSON response"], 200)
+        case "redirect":
+            return try await context.redirect("https://appwrite.io", 301)
+        case "html":
+            return try await context.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, [
+                "content-type": "text/html"
+                ])
+        default:
+            return try await context.empty()
+    }
+}</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>.NET</h3>
+            <div class="ide margin-top-small" data-lang="csharp" data-lang-label="C#">
+                <pre class="line-numbers"><code class="prism language-csharp" data-prism>namespace DotNetRuntime;
+
+public class Handler {
+    public async Task&lt;RuntimeOutput> Main(RuntimeContext Context) 
+    {
+        switch (Context.Request.Query["type"])
+        {
+            case "text":
+                return await Context.Send("This is a text response", 200);
+            case "json":
+                return await Context.Send(new Dictionary&lt;string, object&gt;() { { "type", "This is a JSON response" } }, 200);
+            case "redirect":
+                return await Context.Redirect("https://appwrite.io", 301);
+            case "html":
+                return await Context.Send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, new Dictionary&lt;string, string&gt;() {
+                    { "content-type", "text/html" } 
+                });
+            default:    
+                return await Context.Empty();
+        }
+    }
+}</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>Kotlin</h3>
+            <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin">
+                <pre class="line-numbers"><code class="prism language-kotlin" data-prism>package io.openruntimes.kotlin.src
+
+import io.openruntimes.kotlin.RuntimeContext
+import io.openruntimes.kotlin.RuntimeOutput
+
+class Main {
+    fun main(context: RuntimeContext): RuntimeOutput {
+        when (context.req.query["type"]) {
+            "text" -> return context.send("This is a text response", 200)
+            "json" -> return context.send(mapOf("type" to "This is a JSON response"), 200)
+            "redirect" -> return context.redirect("https://appwrite.io", 301)
+            "html" -> return context.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, mapOf("content-type" to "text/html"))
+            else -> return context.empty()
+        }
+    }
+}</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>Java</h3>
+            <div class="ide margin-top-small" data-lang="java" data-lang-label="Java">
+                <pre class="line-numbers"><code class="prism language-java" data-prism>package io.openruntimes.java.src;
+
+import io.openruntimes.java.RuntimeContext;
+import io.openruntimes.java.RuntimeOutput;
+import java.util.Map;
+import java.util.HashMap;
+
+public class Main {
+    public RuntimeOutput main(RuntimeContext context) throws Exception {
+        switch (context.getReq().getQuery()["type"]) {
+            case "text":
+                return context.send("This is a text response", 200);
+            case "json":
+                HashMap&lt;String, Object&gt; data = new HashMap&lt;&gt;();
+                data.put("type", "This is a JSON response");
+                return context.send(data, 200);
+            case "redirect":
+                return context.redirect("https://appwrite.io", 301);
+            case "html":
+                return context.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, Map.of("content-type", "text/html"));
+            default:
+                return context.empty();
+        }
+    }
+}</code></pre>
+            </div>
+        </li>
+        <li>
+            <h3>C++</h3>
+            <div class="ide margin-top-small" data-lang="cpp" data-lang-label="C++">
+                <pre class="line-numbers"><code class="prism language-csharp" data-prism>#include "../RuntimeResponse.h"
+#include "../RuntimeRequest.h"
+#include "../RuntimeOutput.h"
+#include "../RuntimeContext.h"
+
+namespace runtime {
+  class Handler {
+    public:
+      static RuntimeOutput main(RuntimeContext &context) {
+        std::string type = context.req.query["type"];
+
+        if (type == "text") {
+          return context.send("This is a text response", 200);
+        } else if (type == "json") {
+          Json::Value data;
+          data["type"] = "This is a JSON response";
+          return context.send(data, 200);
+        } else if (type == "redirect") {
+          return context.redirect("https://appwrite.io", 301);
+        } else if (type == "html") {
+          Json::Value headers;
+          headers["content-type"] = "text/html";
+          return context.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, headers);
+        } else {
+          return context.empty();
+        }
+      }
   };
 }</code></pre>
             </div>
