Add link to Destructuring Assignment

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -3,7 +3,7 @@
     Each function is handled following a request and response pattern.
 </p>
 
-<h2>Function Flow</h2>
+<h2><a href="#function-flow" id="function-flow">Function Flow</a></h2>
 <p>
     There is a clear flow for all Appwrite Functions, from beginning to end.
     Here's everything that happens during a function execution.
@@ -478,8 +478,11 @@ public class Main {
     </tbody>
 </table>
 
-<h3>Destructuring Assignment</h3>
-<p>Some languages, namely JavaScript, support destructuring. You'll see us use destructing in examples, which has the following syntax.</p>
+<h3><a href="#destructuring-assignment" id="destructuring-assignment">Destructuring Assignment</a></h3>
+<p>
+    Some languages, namely JavaScript, support destructuring. You'll see us use destructing in examples, which has the following syntax.
+    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment" target="_blank" rel="noopener">Learn more about destructuring assignment</a>.
+</p>
 <ul class="phases clear" data-ui-phases>
     <li>
         <h3>Node.js</h3>
