ChatGPT reviewed grammar and spelling:

--- a/app/views/docs/functions-deploy.phtml
+++ b/app/views/docs/functions-deploy.phtml
@@ -1,5 +1,5 @@
 <p>
-    Appwrite Functions are mini application in Appwrite with their own endpoint. 
+    Appwrite Functions are mini-applications in Appwrite with their own endpoints. 
     Each function can have many deployments, which can be thought of as versions of the mini-application.
 </p>
 
@@ -15,7 +15,7 @@
     This offers simple versioning and collaboration that will easily fit into the rest of your development workflow.
 </p>
 
-<h3>Create Funcion</h3>
+<h3>Create Function</h3>
 <p>Before deploying your function with VCS, create a new function attached to your VCS repo.</p>
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>
@@ -157,7 +157,7 @@
 
 <h2><a href="#domains" id="domains">Domains</a></h2>
 <p>
-    Each deployed function can have it's own domain. 
+    Each deployed function can have its own domain. 
     By default, one is generated for each of your functions.
     You can find the generated domain for your function like this.
 </p>
@@ -179,7 +179,7 @@
     <li class="margin-bottom-small">Navigate to the <b>Domains</b> tab.</li>
     <li class="margin-bottom-small">Click on <b>Create domain</b>.</li>
     <li class="margin-bottom-small">Input your domain in the <b>Domain</b> input field and click <b>Next</b>.</li>
-    <li class="margin-bottom-small">Copy the <b>CNAME</b> record provided to you, and add it to your domain registar.</li>
+    <li class="margin-bottom-small">Copy the <b>CNAME</b> record provided to you, and add it to your domain registrar.</li>
     <li class="margin-bottom-small">Click <b>Go to console</b> and wait for the domain name to be verified and certificate to generate.</li>
 </ol>
 
@@ -200,7 +200,7 @@
 
 <h2><a href="#redeploy" id="redeploy">Redeploy Builds</a></h2>
 <p>
-    After updateing the configuration of your Appwrite Function, you need to redeploy your function for the changes to take effect.
+    After updating the configuration of your Appwrite Function, you need to redeploy your function for the changes to take effect.
     You can also redeploy builds to retry failed builds.
 </p>
 <ol class="margin-top margin-bottom-large text-size-normal">
