--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -446,7 +446,7 @@ public class Main {
 <h2><a href="#context" id="context">The Context Object</a></h2>
 <p>
     Context is an object passed into every function to handle communication to both the end users, and logging to the Appwrite console.
-    All input, output, anddlogging <b>must be</b> handled through the context object passed in.
+    All input, output, and logging <b>must be</b> handled through the context object passed in.
 </p>
 
 <p>You'll find these properties in the context object.</p>
@@ -1284,13 +1284,13 @@ namespace runtime {
     <h2><a href="#environment-variables" id="environment-variables">Accessing Environment Variables</a></h2>
     <p>
         If you need to pass constants or secrets to Appwrite Functions, you can use environment variables.
-        Environmental variables can be global, or function specific.
+        Environmental variables can be global, or function-specific.
     </p>
 
     <h3>Default Environment Variables</h3>
     <p>
         Appwrite runtimes passes in some environment variables by default.
-        These are always accesible for every function at runtime.
+        These are always accessible for every function at runtime.
     </p>
 
     <div class="notice">
@@ -2544,7 +2544,7 @@ export function add(a, b) {
 
 import { add } from './utils.js';
 
-export defaut function ({res}) {
+export default function ({res}) {
     return res.send(add(1, 2));
 }</code></pre>
             </div>
