--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -6,14 +6,14 @@ use Appwrite\Utopia\View;
 
 <p>
     Appwrite Functions unlock limitless potential for developers to extend Appwrite with code snippets.
-    Appwrite Functions are user defined functions that can start small and scale big, deploying automatically from source control. 
-    These Functions can be triggered by HTTP requests, SDK methods, server events, webhooks, scheduled executions.
-    Each function will have their own URL, execute in their own isolated container, and have their own configurable environment variables and permissions.
+    Appwrite Functions are user-defined functions that can start small and scale big, deploying automatically from source control. 
+    These Functions can be triggered by HTTP requests, SDK methods, server events, webhooks, and scheduled executions.
+    Each function will have its own URL, execute in its own isolated container, and have its own configurable environment variables and permissions.
 </p>
 
 <h2><a href="#gettingStarted" id="gettingStarted">Getting Started</a></h2>
 <p>
-    Appwrite Functions let you build anything you can imagine, but this flexibility makes is difficult to know where to start.
+    Appwrite Functions let you build anything you can imagine, but this flexibility makes it difficult to know where to start.
     Start exploring by cloning one of the quick start templates or using a template with pre-built integration to quickly implement features.
 </p>
 
@@ -29,7 +29,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
 
 <h2><a href="#exploreFeatures" id="exploreFeatures">Explore Features</a></h2>
 <p>
-    Appwrite Functions use familiar HTTP concepts, so you can learn quickly and grain transferable skills.
+    Appwrite Functions use familiar HTTP concepts, so you can learn quickly and gain transferable skills.
 </p>
 <p>
 <a href="/docs/functions-develop"><i class="icon-angle-circled-right"></i>Learn more about developing functions</a>
@@ -44,7 +44,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
 </p>
 
 <p>
-    Appwrite Functions can be triggered by HTTP requests, SDK methods, server events, webhooks, scheduled executions.
+    Appwrite Functions can be triggered by HTTP requests, SDK methods, server events, webhooks, and scheduled executions.
     Explore how Appwrite Functions can be invoked.
 </p>
 <p>
@@ -61,7 +61,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
 
 <p>
     Like to learn from examples?
-    Here's a curated list of examples that showcase Appwrite Function's capabilies.
+    Here's a curated list of examples that showcase Appwrite Functions' capabilities.
 </p>
 <p>
 <a href="/docs/functions-examples"><i class="icon-angle-circled-right"></i>Learn more about using function examples</a>
